; ModuleID = '/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_setBitOfReversedStream0.c'
source_filename = "/home/carl/AnghaBench/Craft/deps/lodepng/extr_lodepng.c_setBitOfReversedStream0.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*, i8*, i8)* @setBitOfReversedStream0 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @setBitOfReversedStream0(i64* %0, i8* %1, i8 zeroext %2) #0 {
  %4 = alloca i64*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8, align 1
  store i64* %0, i64** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8 %2, i8* %6, align 1
  %7 = load i8, i8* %6, align 1
  %8 = icmp ne i8 %7, 0
  br i1 %8, label %9, label %27

9:                                                ; preds = %3
  %10 = load i8, i8* %6, align 1
  %11 = zext i8 %10 to i32
  %12 = load i64*, i64** %4, align 8
  %13 = load i64, i64* %12, align 8
  %14 = and i64 %13, 7
  %15 = sub i64 7, %14
  %16 = trunc i64 %15 to i32
  %17 = shl i32 %11, %16
  %18 = load i8*, i8** %5, align 8
  %19 = load i64*, i64** %4, align 8
  %20 = load i64, i64* %19, align 8
  %21 = lshr i64 %20, 3
  %22 = getelementptr inbounds i8, i8* %18, i64 %21
  %23 = load i8, i8* %22, align 1
  %24 = zext i8 %23 to i32
  %25 = or i32 %24, %17
  %26 = trunc i32 %25 to i8
  store i8 %26, i8* %22, align 1
  br label %27

27:                                               ; preds = %9, %3
  %28 = load i64*, i64** %4, align 8
  %29 = load i64, i64* %28, align 8
  %30 = add i64 %29, 1
  store i64 %30, i64* %28, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
